--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -4,4 +4,12 @@ on: pull_request_review
 
 jobs:
   labelWhenApproved:
+    name: Label When Approved
     runs-on: ubuntu-latest
+    steps:
+    - name: label approved PR
+      uses: pullreminders/label-when-approved-action
+      env:
+        APPROVALS: 1
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        ADD_LABEL: ApprovedAndReadyForMerge
