--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: label approved PR
-      uses: pullreminders/label-when-approved-action
+      uses: pullreminders/label-when-approved-action@main
       env:
         APPROVALS: 1
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
